--- a/MOBILE/index.html
+++ b/MOBILE/index.html
@@ -75,7 +75,7 @@
 		</div>
 
         <p>Khi để mức setting đồ hoạ cơ bản thì mình chơi hoàn toàn ổn, không hề có hiện tượng giật lag gì cả. Còn những tựa game đơn giản như Angry Birds hay Candy Crush thì như cái ghế vậy, vì nó “không phải bàn”.</p>
-        <p>Giờ là 17 giờ chiều, sau 2 tiếng leo Rank thì mức pin của Galaxy A04s vẫn còn hơn đến 60%, thật đáng khâm phục. Nếu các bạn quan tâm về pin nhiều hơn thì tụi mình đã có bài đánh giá chi tiết pin, các bạn có thể xem thêm tại đây.</p>
+        <p>Giờ là 17 giờ chiều, sau 2 tiếng leo Rank thì mức pin của Galaxy A04s vẫn còn hơn đến 60%, thật đáng khâm phục. Nếu các bạn quan tâm về pin nhiều hơn thì tụi mình đã có bài đánh giá chi tiết pin, các bạn có thể xem thêm <a href="https://www.thegioididong.com/tin-tuc/danh-gia-pin-galaxy-a04s-1476251">tại đây</a>.</p>
 
 		<div class="img-fullscreen">
 			<img src="images/img06.png">
